@@ -6,11 +6,13 @@ AUX passenger-CFLAGS.patch 646 RMD160 12f1e5f80fd2694fed612226561670f9a0f7f556 S
 DIST Mod_rrd_graph-0.2.0.tar.gz 3793 RMD160 fbb9698f18fa69cdfd311b0f7d43ccfe046937f0 SHA1 12b75d833d54aece7838359ef1214fe95602c051 SHA256 fbb095b5dbab87ab0ef6be663d9837ec07efbb5df5250efe40fbbab1b898372d
 DIST chunkin-nginx-module-0.19.tgz 84817 RMD160 421457c805701d1bf740caad6d36163a32bfcfba SHA1 bb1a39de6a93db76946ea936564c6a36825ee5a1 SHA256 fb5494cf8bf449b01c73b49c5da39da614ae32be55b4dd354633e1b2dce770f0
 DIST nginx-0.8.38.tar.gz 623969 RMD160 62b23252d16a861ea092cbd8bc28882e4f84157d SHA1 8e48ac109b07f0542ccda93e5b4bab67d9598aef SHA256 a97241207e7060aa04571e313908f22e007df5b2667c42274420e6a961b2c8c5
+DIST nginx-0.8.40.tar.gz 634603 RMD160 20d19727c1a6c2c52f2fba046e09e1e2f8c76cec SHA1 251145e5cc3973c58c3365d687701c35c8aef76e SHA256 a6db999e9e40bfcebc3976b8fd57cd97fff1ca30e2bd3e499ae74b37f92b5460
 DIST nginx_http_push_module-0.692.tar.gz 29119 RMD160 9d2be16074cf28115af0f1d8f3646937cda649ad SHA1 72103084cad8f4d3d9a49a6b04cf780e4541605d SHA256 64868708071aa21dbc4c7a07d149dd6ec9108fb7eaf2aad5ad069406151f17fe
 DIST ngx-http-headers-more-0.08.tar.gz 71764 RMD160 63ee177d5abca7c958c88197f02a4063c88dba7c SHA1 b8c6f2499e44fd9fb84bef87b3f4588ddfa70798 SHA256 3e3bc43e98d95b8a0923cf6ec1af5644e855d15e33b6553096e02c53c69bc4d5
 DIST ngx_http_auth_pam_module-1.1.tar.gz 5193 RMD160 38437a1f5d34f93b22abb9f0a7181be756356d33 SHA1 d04065a512169925dda8bce710e1dc5012cac47b SHA256 ea9da5f106b952729398248cddabbe25f7a5752993e91c9b8252dbc2b03b8ecd
 DIST passenger-2.2.11.tar.gz 2058085 RMD160 54ee5ab25155adaf4b6be9dc0aee190a323254e5 SHA1 9c38d364f59cb72c14a2f4c22445252468f08c4e SHA256 9d4aa14a4dfe9daa713aa19a787e1a5bee0db9f3625e17ffebe1e5325aa20a88
 DIST uwsgi-0.9.5.1.tar.gz 120134 RMD160 6ad9b928a9bbf764679c1db3b1326f8d445febbb SHA1 ec4a47d7f7af4cba88c750b795194cb3c780d1e5 SHA256 2efab0f2cea90261c3ee56026618955c15ac7467ba6f0dbfe9e685da28204bc1
 EBUILD nginx-0.8.38-r1.ebuild 10966 RMD160 360b2ce8de499cdc6bce73e9cc3b63fa7ed12834 SHA1 13ee7f40584175eef932e88b338faf285f22e417 SHA256 d7eac58185fc7df3379c2704ec972687ea0bc10a7a4226e5403aad7109aa719b
-MISC ChangeLog 3244 RMD160 adc4110325734ff22bab055f0f40ea30d7cca4d4 SHA1 ac3000e8d309e62707df4669a4aafa5dd119f138 SHA256 b9b88bef6e19f2921b5fef60a7a059f7be79cbba728a07389b7e147875eed9c0
-MISC metadata.xml 761 RMD160 2478e9efbdac4793a44228e833444cf23dc9ca01 SHA1 b693f85c37122c3abeb32d25e2cb880659ab4474 SHA256 33e9507a9188dbc3166b364da4ed3fca2fdde285e3bedb1dbb9b7c8fe41dfbb3
+EBUILD nginx-0.8.40.ebuild 10966 RMD160 360b2ce8de499cdc6bce73e9cc3b63fa7ed12834 SHA1 13ee7f40584175eef932e88b338faf285f22e417 SHA256 d7eac58185fc7df3379c2704ec972687ea0bc10a7a4226e5403aad7109aa719b
+MISC ChangeLog 3342 RMD160 fef1a819c24251be2025e3dbcb702bcb4e616b25 SHA1 8047dae1a88ed866acd1857772b26c084e4575b1 SHA256 b32ae278e83b3e4f0f2880a3163f62c8dcb21746d0c0fd0029514c9becccede5
+MISC metadata.xml 700 RMD160 fdc32c78fe99a870f61c081172c198a3ebe2dae6 SHA1 af42859ae91c302e736f00a7e06cbbde7fc5d65b SHA256 5b2325acd26d95505454442f8cdf6c49f86b32b9c73e623c2a47bcfb20ccd000
